# monitor-select

./: README.md  config.json  log.ini  main.py  pyproject.toml  switch_inputs.bat
